# efisnake

./: .gitignore  Cargo.toml  README.md
src/: buffer.rs  main.rs  misc.rs  rand.rs
