[package]
name = "efisnake"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
uefi = { version = "0.36", features = ["logger", "panic_handler", "alloc", "global_allocator"] }
embedded-graphics = "0.8"
embedded-graphics-core = "0.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"